styles.scss
/* ... */
.container{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 700px repeat(3, 1fr);
    grid-template-areas: 
        "head"
        "main"
        "images"
        "footer";

    margin: 0;
    width: 100vw;
    height: 100vh;

    img{
        max-width: 100%;
        display: block;
    }
}

header{
    grid-area: head;
    background-image: url("images/mobile/image-header.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;

    nav{
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        margin-top: 7%;

        .logo{
            margin-left: 6%;
        }
        .burger{
            margin-right: 6%;
        }
    }

    .toggle-menu{
        display: none;
        flex-direction: column;
        align-items: center;
        position: absolute;
        width: 89%;
        left: 5%;
        top: 20%;
        padding: 0;
        background-color: $white;

        .right-nav{
        display: flex;
        }

        li{
            padding-top: 10%;
            padding-bottom: 10%;
            
            a{
                text-decoration: none;
                font-family: $font-body;
                color: $grey;
            }
            a:hover{
                color: $dark-grey-blue;
            }

            .button{
                background-color: $yellow;
                border: none;
                border-radius: 25px;
                color: $dark-grey-blue;
                padding: 15px 32px;
                font-family: $font-headers;
                text-transform: uppercase;
                text-align: center;
            }
            .button:hover{
                background-color: $yellow;
                color: $white;
            }           
     
        }
    }

    .title{
        display: flex;
        flex-direction: column;
        align-items: center;

        h1{
            text-transform: uppercase;
            text-align: center;
            font-family: $font-headers;
            color: $white;
            letter-spacing: 10px;
            font-size: 300%;
            padding-top: 30%;
            padding-bottom: 5%;
        }
    }
}

main{
    grid-area: main;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(7, 0.1fr);
    grid-template-areas: 
    "egg"
    "brand"
    "wine"
    "standout"
    "graphic"
    "photo"
    "feedback";
    .egg{
        grid-area: egg;
    }
    .brand{
        grid-area: brand;
        @include card($hover-yellow, $yellow);
    }
    .glass{
        grid-area: wine;
    }
    .standout{
        grid-area: standout;
        @include card($hover-red, $red);
    }
    .graphic{
        grid-area: graphic;
        @include overlay;
    }
    .photo{
        grid-area: photo;
        @include overlay($theme: $photo);
    }
    .container-clients{
        grid-area: feedback;
        display: flex;
        flex-direction: column;
        align-items: center;
        padding-top: 10%;
        padding-bottom: 10%;

        h3{
            font-family: $font-headers;
            text-transform: uppercase;
            letter-spacing: 5px;
            color: $light-grey;
        }

        .clients{
            display: grid;
            grid-template-columns: 1fr;
            grid-template-rows: 1fr;
            grid-template-areas: 
            "emily" 
            "thomas" 
            "jennie";
            padding-top: 5%;

            .emily{
                grid-area: emily;
            }
            .thomas{
                grid-area: thomas;
            }
            .jennie{
                grid-area: jennie;
            }

            .blurb{
                display: flex;
                flex-direction: column;
                align-items: center;
                line-height: 1.7em;
                text-align: center;

                p{
                    font-family: $font-body;
                    color: $dark-grey;
                }
            }

            div p:first-child{
                font-family: $font-headers;
                color: $dark-grey-blue;
                font-size: 1.1rem;
                margin-bottom: 0;
            }
            div p:last-child{
                font-family: $font-body;
                color: $light-grey;
                font-size: 0.9rem;
                margin-top: 0;
            }

            img{
                border-radius: 50%;
                margin-bottom: 2%;
                margin-top: 10%;
            }
            img + p{
                width: 77%; 
            }
        }
    }
}   
.images{
    grid-area: images;
    .gallery{
        list-style: none;
        padding: 0;
        margin: 0;

        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        grid-template-areas: 
         "img1 img2"
         "img3 img4";
        
        .milk{
            grid-area: img1;
        }
        .orange{
            grid-area: img2;
        }
        .cone{
            grid-area: img3;
        }
        .cube{
            grid-area: img4;
        }
    }

}
/* ... */

